--- a/ADMFacturar/Views/Clientes/CrearCliente.cshtml
+++ b/ADMFacturar/Views/Clientes/CrearCliente.cshtml
@@ -4,11 +4,18 @@
 
 <form asp-action="CrearCliente" method="post">
 	<div class="border-b border-gray-900/10 pb-12">
-		<h2 class="text-base font-semibold leading-7 text-white">Creacion de nuevo cliente</h2>
+		<h2 class="text-base font-semibold leading-7 text-white">Creación de nuevo cliente</h2>
 		<div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
 
+			<div class="sm:col-span-2 ">
+				<label for="city" class="block text-sm font-medium leading-6 text-white">Código Cliente</label>
+				<div class="mt-2">
+					<input asp-for="PK_Cliente" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+				</div>
+			</div>
+		
 			<div class="sm:col-span-2">
-				<label for="provider" class="block text-sm font-medium leading-6 text-white">Tipo de Identificacion</label>
+				<label for="provider" class="block text-sm font-medium leading-6 text-white">Tipo de Identificación</label>
 				<div class="mt-2">
 					<select asp-for="TipoIdentificacion"  class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
 						<option value="1">Fisico</option>
@@ -18,26 +25,21 @@
 			</div>
 
 			<div class="sm:col-span-2 ">
-				<label for="city" class="block text-sm font-medium leading-6 text-white">Numero de Identificacion</label>
+				<label for="city" class="block text-sm font-medium leading-6 text-white">Número de Identificación</label>
 				<div class="mt-2">
 					<input asp-for="Identificacion" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
 				</div>
 			</div>
-
 			<div class="sm:col-span-2">
 				<label for="region" class="block text-sm font-medium leading-6 text-white">Nombre</label>
 				<div class="mt-2">
 					<input asp-for="Nombre" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
 				</div>
 			</div>
+
+		
 			<div class="sm:col-span-2">
-				<label for="region" class="block text-sm font-medium leading-6 text-white">Apellidos</label>
-				<div class="mt-2">
-					<input type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
-				</div>
-			</div>
-			<div class="sm:col-span-2">
-				<label for="region" class="block text-sm font-medium leading-6 text-white">Telefono</label>
+				<label for="region" class="block text-sm font-medium leading-6 text-white">Teléfono</label>
 				<div class="mt-2">
 					<input asp-for="Telefono" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
 				</div>
@@ -47,6 +49,34 @@
 				<label for="email" class="block text-sm font-medium leading-6 text-white">Correo</label>
 				<div class="mt-2">
 					<input asp-for="Correo"  type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+				</div>
+			</div>
+			<div class="sm:col-span-2">
+				<label for="provider" class="block text-sm font-medium leading-6 text-white">Condición de Pago</label>
+				<div class="mt-2">
+					<select asp-for="FK_CondicionPago" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
+						<option value="1">Contado</option>
+						<option value="2">Credito 30 Días</option>
+						<option value="2">Credito 60 Días</option>
+					</select>
+				</div>
+			</div>
+			<div class="sm:col-span-2">
+				<label for="provider" class="block text-sm font-medium leading-6 text-white">Transporte</label>
+				<div class="mt-2">
+					<select asp-for="FK_Transporte" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
+						<option value="1">Transporte</option>
+						<option value="2">Personal</option>
+					</select>
+				</div>
+			</div>
+			<div class="sm:col-span-2">
+				<label for="provider" class="block text-sm font-medium leading-6 text-white">Vendedor</label>
+				<div class="mt-2">
+					<select asp-for="FK_Vendedor" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
+						<option value="1">Juan</option>
+						<option value="2">Maria</option>
+					</select>
 				</div>
 			</div>
 			<div class="sm:col-span-2">
@@ -75,40 +105,12 @@
 					<input asp-for="Distrito" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
 				</div>
 			</div>
-			<div class="sm:col-span-3">
-				<label for="region" class="block text-sm font-medium leading-6 text-white">Barrio y otras senas </label>
+			<div class="sm:col-span-2">
+				<label for="region" class="block text-sm font-medium leading-6 text-white">Barrio y otras señas</label>
 				<div class="mt-2">
 					<input asp-for="OtrasSenas" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
 				</div>
-			</div>
-			<div class="sm:col-span-3">
-				<label for="provider" class="block text-sm font-medium leading-6 text-white">Transporte</label>
-				<div class="mt-2">
-					<select asp-for="FK_Transporte" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
-						<option value="1">Transporte</option>
-						<option value="2">Personal</option>
-					</select>
-				</div>
-			</div>
-			<div class="sm:col-span-2">
-				<label for="provider" class="block text-sm font-medium leading-6 text-white">Vendedor</label>
-				<div class="mt-2">
-					<select asp-for="FK_Vendedor" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
-						<option value="1">Juan</option>
-						<option value="2">Maria</option>
-					</select>
-				</div>
-			</div>
-			<div class="sm:col-span-2">
-				<label for="provider" class="block text-sm font-medium leading-6 text-white">Condición de Pago</label>
-				<div class="mt-2">
-					<select asp-for="FK_CondicionPago" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
-						<option value="1">Contado</option>
-						<option value="2">Credito 30 Días</option>
-						<option value="2">Credito 60 Días</option>
-					</select>
-				</div>
-			</div>
+			</div>	
 			<div class="sm:col-span-2">
 				<label for="provider" class="block text-sm font-medium leading-6 text-white">Estado</label>
 				<div class="mt-2">
