--- a/ADMFacturar/Views/Clientes/CrearCliente.cshtml
+++ b/ADMFacturar/Views/Clientes/CrearCliente.cshtml
@@ -8,14 +8,14 @@
 		<div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
 
 			<div class="sm:col-span-2 ">
-				<label for="city" class="block text-sm font-medium leading-6 text-white">Código Cliente</label>
+				<label for="PK_Cliente" class="block text-sm font-medium leading-6 text-white">Código Cliente</label>
 				<div class="mt-2">
 					<input asp-for="PK_Cliente" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
 				</div>
 			</div>
 		
 			<div class="sm:col-span-2">
-				<label for="provider" class="block text-sm font-medium leading-6 text-white">Tipo de Identificación</label>
+				<label for="TipoIdentificacion" class="block text-sm font-medium leading-6 text-white">Tipo de Identificación</label>
 				<div class="mt-2">
 					<select asp-for="TipoIdentificacion"  class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
 						<option value="1">Fisico</option>
@@ -25,13 +25,13 @@
 			</div>
 
 			<div class="sm:col-span-2 ">
-				<label for="city" class="block text-sm font-medium leading-6 text-white">Número de Identificación</label>
+				<label for="Identificacion" class="block text-sm font-medium leading-6 text-white">Número de Identificación</label>
 				<div class="mt-2">
-					<input asp-for="Identificacion" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+					<input asp-for="Identificacion" type="number" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
 				</div>
 			</div>
 			<div class="sm:col-span-2">
-				<label for="region" class="block text-sm font-medium leading-6 text-white">Nombre</label>
+				<label for="Nombre" class="block text-sm font-medium leading-6 text-white">Nombre</label>
 				<div class="mt-2">
 					<input asp-for="Nombre" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
 				</div>
@@ -39,20 +39,20 @@
 
 		
 			<div class="sm:col-span-2">
-				<label for="region" class="block text-sm font-medium leading-6 text-white">Teléfono</label>
+				<label for="Telefono" class="block text-sm font-medium leading-6 text-white">Teléfono</label>
 				<div class="mt-2">
 					<input asp-for="Telefono" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
 				</div>
 			</div>
 
 			<div class="sm:col-span-2">
-				<label for="email" class="block text-sm font-medium leading-6 text-white">Correo</label>
+				<label for="Correo" class="block text-sm font-medium leading-6 text-white">Correo</label>
 				<div class="mt-2">
 					<input asp-for="Correo"  type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
 				</div>
 			</div>
 			<div class="sm:col-span-2">
-				<label for="provider" class="block text-sm font-medium leading-6 text-white">Condición de Pago</label>
+				<label for="FK_CondicionPago" class="block text-sm font-medium leading-6 text-white">Condición de Pago</label>
 				<div class="mt-2">
 					<select asp-for="FK_CondicionPago" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
 						<option value="1">Contado</option>
@@ -62,7 +62,7 @@
 				</div>
 			</div>
 			<div class="sm:col-span-2">
-				<label for="provider" class="block text-sm font-medium leading-6 text-white">Transporte</label>
+				<label for="FK_Transporte" class="block text-sm font-medium leading-6 text-white">Transporte</label>
 				<div class="mt-2">
 					<select asp-for="FK_Transporte" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
 						<option value="1">Transporte</option>
@@ -71,7 +71,7 @@
 				</div>
 			</div>
 			<div class="sm:col-span-2">
-				<label for="provider" class="block text-sm font-medium leading-6 text-white">Vendedor</label>
+				<label for="FK_Vendedor" class="block text-sm font-medium leading-6 text-white">Vendedor</label>
 				<div class="mt-2">
 					<select asp-for="FK_Vendedor" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
 						<option value="1">Juan</option>
@@ -80,7 +80,7 @@
 				</div>
 			</div>
 			<div class="sm:col-span-2">
-				<label for="provider" class="block text-sm font-medium leading-6 text-white">Provincia</label>
+				<label for="Provincia" class="block text-sm font-medium leading-6 text-white">Provincia</label>
 				<div class="mt-2">
 					<select asp-for="Provincia" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
 						<option value="1">San Jose</option>
@@ -94,36 +94,35 @@
 				</div>
 			</div>
 			<div class="sm:col-span-2">
-				<label for="region" class="block text-sm font-medium leading-6 text-white">Canton</label>
+				<label for="Canton" class="block text-sm font-medium leading-6 text-white">Canton</label>
 				<div class="mt-2">
 					<input asp-for="Canton" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
 				</div>
 			</div>
 			<div class="sm:col-span-2">
-				<label for="region" class="block text-sm font-medium leading-6 text-white">Distrito</label>
+				<label for="Distrito" class="block text-sm font-medium leading-6 text-white">Distrito</label>
 				<div class="mt-2">
 					<input asp-for="Distrito" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
 				</div>
 			</div>
 			<div class="sm:col-span-2">
-				<label for="region" class="block text-sm font-medium leading-6 text-white">Barrio y otras señas</label>
+				<label for="OtrasSenas" class="block text-sm font-medium leading-6 text-white">Barrio y otras señas</label>
 				<div class="mt-2">
 					<input asp-for="OtrasSenas" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
 				</div>
 			</div>	
 			<div class="sm:col-span-2">
-				<label for="provider" class="block text-sm font-medium leading-6 text-white">Estado</label>
+				<label for="Estado" class="block text-sm font-medium leading-6 text-white">Estado</label>
 				<div class="mt-2">
 					<select asp-for="Estado" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
-						<option value="True">Activo</option>
-						<option value="False">Inactivo</option>
+						<option value="true">Activo</option>
+						<option value="false">Inactivo</option>
 					</select>
 				</div>
 			</div>
 		</div>
 		<br />
 		<br />
-		<input asp-for="PK_Cliente" value="1" hidden/>
 		<input asp-for="FK_Usuario_Creacion" value="1" hidden/>
 		<input asp-for="FK_Usuario_Modificacion" value="1" hidden/>
 		<button type="submit" asp-action="CrearCliente" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
