--- a/ADMFacturar/Views/Transportes/ActualizarTransporte.cshtml
+++ b/ADMFacturar/Views/Transportes/ActualizarTransporte.cshtml
@@ -1,18 +1,17 @@
 ﻿@model Transporte
-
 <form asp-action="ActualizarTransporte" method="post">
     <div class="border-b border-gray-900/10 pb-12">
         <h2 class="text-base font-semibold leading-7 text-white">Actualizar Transporte</h2>
         <div class="mt-4 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+
             <div class="sm:col-span-2">
-                <label for="descripcion" class="block text-sm font-medium leading-6 text-white">Descripción</label>
+                <label for="region" class="block text-sm font-medium leading-6 text-white">Descripción Transporte</label>
                 <div class="mt-2">
                     <input asp-for="Descripcion" type="text" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
                 </div>
             </div>
-
             <div class="sm:col-span-2">
-                <label for="estado" class="block text-sm font-medium leading-6 text-white">Estado</label>
+                <label for="provider" class="block text-sm font-medium leading-6 text-white">Estado</label>
                 <div class="mt-2">
                     <select asp-for="Estado" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px; height: 35px;">
                         <option value="true">Activo</option>
@@ -20,17 +19,14 @@
                     </select>
                 </div>
             </div>
-
-            <!-- Hidden inputs for non-editable fields -->
-            <input asp-for="PK_Medio_Transporte" value="@Model.PK_Medio_Transporte" hidden />
-            <input asp-for="FK_Usuario_Creacion" value="1" hidden />
-            <input asp-for="FK_Usuario_Modificacion" value="1" hidden />
-
-            <!-- Buttons -->
-            <div class="sm:col-span-2">
-                <button type="submit" asp-action="ActualizarTransporte" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
-                <a asp-action="Index" class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</a>
-            </div>
         </div>
+        <br />
+        <br />
+        <input asp-for="PK_Medio_Transporte" value="@Model.PK_Medio_Transporte" hidden />
+        <input asp-for="FK_Usuario_Creacion" value="1" hidden />
+        <input asp-for="FK_Usuario_Modificacion" value="1" hidden />
+        <button type="submit" asp-action="ActualizarTransporte" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+        <button asp-action="Index" class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</button>
     </div>
 </form>
+
