--- a/ADMFacturar/Views/Administracion/Index.cshtml
+++ b/ADMFacturar/Views/Administracion/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<link href="~/css/custom.css" rel="stylesheet" />
+﻿@* <link href="~/css/custom.css" rel="stylesheet" />
 
 <div class="w-full">
 </div>
@@ -53,5 +53,57 @@
 
 
     <!--        Final Seleccion de tarea      -->
+
+</main> *@
+<link href="~/css/custom.css" rel="stylesheet" />
+
+@* <main class="flex justify-center items-center min-h-screen">
+
+    <div class="container mx-auto"> *@
+        <main class="main-container">
+            <div class="cards-container">
+        <div class="flex flex-row flex-wrap justify-center gap-6">
+
+            <a asp-action="Index" asp-controller="Clientes" class="transform hover:scale-105 transition duration-500">
+                <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
+                    <i class="fa-solid fa-user-tag text-5xl text-indigo-500 mb-4"></i>
+                    <h3 class="text-lg font-semibold text-gray-800">Clientes</h3>
+                    <p class="text-gray-600">Administración de Clientes</p>
+                </div>
+            </a>
+
+            <a asp-action="Index" asp-controller="Articulos" class="transform hover:scale-105 transition duration-500">
+                <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
+                    <i class="fa-solid fa-grip-vertical text-5xl text-indigo-500 mb-4"></i>
+                    <h3 class="text-lg font-semibold text-gray-800">Artículos</h3>
+                    <p class="text-gray-600">Administración de Artículos</p>
+                </div>
+            </a>
+
+            <a asp-action="Index" asp-controller="Proveedores" class="transform hover:scale-105 transition duration-500">
+                <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
+                    <i class="fa-solid fa-address-book text-5xl text-indigo-500 mb-4"></i>
+                    <h3 class="text-lg font-semibold text-gray-800">Proveedores</h3>
+                    <p class="text-gray-600">Administración de Proveedores</p>
+                </div>
+            </a>
+
+            <a asp-action="Index" asp-controller="Vendedores" class="transform hover:scale-105 transition duration-500">
+                <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
+                    <i class="fa-solid fa-user-tie text-5xl text-indigo-500 mb-4"></i>
+                    <h3 class="text-lg font-semibold text-gray-800">Vendedores</h3>
+                    <p class="text-gray-600">Administración de Vendedores</p>
+                </div>
+            </a>
+
+            <a asp-action="Index" asp-controller="Transportes" class="transform hover:scale-105 transition duration-500">
+                <div class="bg-white rounded-lg shadow-lg p-6 text-center hover:shadow-xl">
+                    <i class="fa-solid fa-truck-fast text-5xl text-indigo-500 mb-4"></i>
+                    <h3 class="text-lg font-semibold text-gray-800">Transportes</h3>
+                    <p class="text-gray-600">Administración de Transportes</p>
+                </div>
+            </a>
+        </div>
+    </div>
 
 </main>
